[project]
name = "morphoclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "basedpyright>=1.37.4",
    "cleanlab>=2.9.0",
    "dill>=0.4.1",
    "imbalanced-learn>=0.14.1",
    "marimo>=0.14.10",
    "morphio>=3.4.0",
    "neurom>=4.0.4",
    "pdbp>=1.8.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.0",
    "seaborn>=0.13.2",
    "setuptools>=82.0.0",
    "tmd>=2.4.3",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.30.0",
    "loguru>=0.7.3",
    "pdbp>=1.7.0",
    "ruff>=0.12.2",
]
analysis = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "polars>=1.19.0",
    "seaborn>=0.13.2",
]

[tool.basedpyright]
include = ["src/morphoclass/**"]
exclude = ["src/morphoclass.egg-info"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["morphoclass*"]
